api rest server passed all tests

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -6,7 +6,7 @@ cc:
   throw_exception: True #if this is set to True then application will get exceptions
   auth_token_expire_time: 40000 #seconds
   auth_encryption_key: "md@k&#8"
-  log_files_path: "/Users/ali/IdeaProjects/CerebralCortex-Platform/mount_points/apiserver/data/"
+  log_files_path: "/Users/ali/cc_data/"
 
 #########################################################################
 #                        NoSQL Storage                                  #
@@ -15,7 +15,7 @@ nosql_storage: filesystem
 
 filesystem:
   # in case of nosql_store=filesystem, provide directory path where all processed-data shall be stored
-  filesystem_path: "/Users/ali/IdeaProjects/MD2K_DATA/stress_sample_ecg_data/"
+  filesystem_path: "/Users/ali/cc_data/"
 
 hdfs:
   host: localhost
@@ -30,7 +30,7 @@ hdfs:
 relational_storage: mysql
 
 sqlite:
-  file_path: "/Users/ali/IdeaProjects/MD2K_DATA/sqlite/"
+  file_path: "/Users/ali/cc_data/"
 
 mysql:
   host: 127.0.0.1 # change if MySQL is installed remotely
@@ -42,7 +42,7 @@ mysql:
 #########################################################################
 ###################### Visualization Data Storage #######################
 #########################################################################
-visualization_storage: none
+visualization_storage: influxdb
 
 influxdb:
   host: 127.0.0.1
