added input stream names in metadata for stress computation

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -42,7 +42,7 @@ mysql:
 #########################################################################
 ###################### Visualization Data Storage #######################
 #########################################################################
-visualization_storage: influxdb
+visualization_storage: none
 
 influxdb:
   host: 127.0.0.1
