--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ geopy==1.18.1
 scikit-learn==0.22.2.post1
 plotly==4.9.0
 matplotlib
-cufflinks
+cufflinks==0.17.3
 ipyleaflet
 scipy
 statsmodels==0.11.1
