--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-wheel==0.29.0
-pytz==2017.2
+wheel
+pytz
 mysql-connector-python==8.0.15
 PyYAML>=5.3.1
 SQLAlchemy-Utils==0.36.6
-minio==2.2.4
+minio
 influxdb==5.2.1
 pyarrow==2.0.0
-pympler==0.5
+pympler
 hdfs3==0.3.0
 pyspark==3.0.1
 msgpack==0.6.1
-PyJWT==1.7.1
-pandas==1.0.5
+PyJWT
+pandas
 texttable
-shapely==1.7.0
-numpy==1.19.1
-geopy==1.18.1
-scikit-learn==0.22.2.post1
+shapely
+numpy
+geopy
+scikit-learn
 plotly==4.9.0
 matplotlib
 cufflinks==0.17.3
 ipyleaflet
 scipy
-statsmodels==0.11.1
+statsmodels
 sqlalchemy==1.3.17
 pennprov==2.2.9
