--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
 wheel
 pytz
-mysql-connector-python==8.0.15
-PyYAML>=5.3.1
-SQLAlchemy-Utils==0.36.6
-influxdb==5.2.1
-pyarrow==3.0.0
-pympler
-hdfs3==0.3.0
-pyspark==3.1.1
-msgpack==0.6.1
-PyJWT
-pandas
-texttable
+#mysql-connector-python==8.0.25
+PyYAML>=5.4.1
+SQLAlchemy-Utils==0.37.8
+influxdb==5.3.1
+pyarrow==4.0.1
+hdfs3==0.3.1
+pyspark==3.1.2
+msgpack==1.0.2
+PyJWT==2.1.0
+pandas==1.3.0
+plotly==5.1.0
+folium==0.12.1
+matplotlib
+cufflinks==0.17.3
+sqlalchemy==1.3.24 #1.4.x is causing some weird error if pyspark is imported before SQLAlchemy-Utils
+pennprov==2.2.9
 shapely
 numpy
 geopy
+py-ecg-detectors
 scikit-learn
-plotly
-folium
-matplotlib
-cufflinks==0.17.3
-ipyleaflet
+
 scipy
-statsmodels
-sqlalchemy==1.3.17
-pennprov==2.2.9
+#statsmodels
