--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ hdfs3==0.3.1
 pyspark==3.1.2
 msgpack==1.0.2
 PyJWT==2.1.0
-pandas==1.3.0
+pandas==1.1.0
 plotly==5.1.0
-folium==0.12.1
+datascience==0.17.0 # it installs folium==0.12.1. For colab
 matplotlib
 cufflinks==0.17.3
 sqlalchemy==1.3.24 #1.4.x is causing some weird error if pyspark is imported before SQLAlchemy-Utils
