--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ sqlalchemy==1.3.24 #1.4.x is causing some weird error if pyspark is imported bef
 pennprov==2.2.9
 shapely
 numpy
-geopy==
+geopy
 py-ecg-detectors
 scikit-learn==0.22.2.post1
 
